Update travis ci run script by bash

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,9 +46,9 @@ script:
   -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES
   test | xcpretty -c; else xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination
   "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty -c; fi
-- fastlane/travis/script.sh
+- bash fastlane/travis/script.sh
 after_success:
-  - fastlane/travis/after_success_script.sh
+  - bash fastlane/travis/after_success_script.sh
   - bash <(curl -s https://codecov.io/bash) -J "LayoutKit-iOS"
 jobs:
   include:
